[29253] Render error message in production on pending migrations
Creates a new warning bar (previously top-shelf item) that renders a
warning when migrations are pending. These did raise exceptions before
in production and would result in users running in internal errors due
to pending migration on some actions on the instance.

https://community.openproject.com/wp/29253

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -91,7 +91,7 @@ See docs/COPYRIGHT.rdoc for more details.
   <%= crowdin_in_context_translation %>
 </head>
 <body class="<%= body_css_classes %> __overflowing_element_container __overflowing_body" data-relative_url_root="<%= root_path %>" data-overflowing-identifier=".__overflowing_body">
-<%= render partial: 'browser/unsupported_browser' if unsupported_browser? %>
+<%= render partial: 'warning_bar/warning_bar' %>
 <noscript>
   <div class="top-shelf">
     <p>
