--- a/app/views/warning_bar/_unsupported_browser.html.erb
+++ b/app/views/warning_bar/_unsupported_browser.html.erb
@@ -1,4 +1,4 @@
-<div id="unsupported-browser-warning" class="top-shelf unsupported-browser-warning--pane">
+<div id="unsupported-browser-warning" class="warning-bar--item unsupported-browser-warning--pane">
   <p>
     <span title="<%= t('unsupported_browser.close_warning') %>" class="icon3 icon-warning unsupported-browser-warning--icon"></span>
     <strong><%= t('unsupported_browser.title') %></strong>
